[package]
name = "sexpr_process"
version = "0.1.0"
edition = "2018"
authors = ["Lyzh <enterindex@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/imlyzh/sexpr_process"

description = "A Generic S-Expression Process and High-Level Parser Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sexpr_ir = "^0.4.*"
